# code-splitter

./: Cargo.toml
.github/workflows/: rust_ci.yml  rust_release.yml
bindings/python/: Cargo.toml
bindings/python/src/: language.rs
src/: splitter.rs
src/sizer/: chars.rs  words.rs
tests/: golang.rs  markdown.rs  python.rs  rust.rs
