[package]
name = "code-splitter-python"
readme = false
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "code_splitter"
crate-type = ["cdylib"]

[dependencies]
code-splitter = { path = "../..", features = ["tiktoken-rs", "tokenizers"] }
pyo3 = { version = "0.24.1", features = ["extension-module"] }
tiktoken-rs = "0.6.0"
tokenizers = { version = "0.21.1", features = ["http"] }
tree-sitter = "0.25.3"
tree-sitter-go = "0.23.4"
tree-sitter-md = "0.3.2"
tree-sitter-python = "0.23.6"
tree-sitter-rust = "0.24.0"
